--- a/content/olaj.html
+++ b/content/olaj.html
@@ -29,199 +29,186 @@ markup: html
         style="width: 300px"
         style="border: 0"
       />
+    </td>
+  </tr>
 
-      <tr>
-        <td valign="top">
-          <img
-            src="/images/kepek/olaj04.jpg"
-            style="width: 300px"
-            style="border: 0"
-          />
-        </td>
-        <td valign="top">
-          <img
-            src="/images/kepek/olaj05.jpg"
-            style="width: 300px"
-            style="border: 0"
-          />
-        </td>
-        <td valign="top">
-          <img
-            src="/images/kepek/olaj06.jpg"
-            style="width: 300px"
-            style="border: 0"
-          />
+  <tr>
+    <td valign="top">
+      <img
+        src="/images/kepek/olaj04.jpg"
+        style="width: 300px"
+        style="border: 0"
+      />
+    </td>
+    <td valign="top">
+      <img
+        src="/images/kepek/olaj05.jpg"
+        style="width: 300px"
+        style="border: 0"
+      />
+    </td>
+    <td valign="top">
+      <img
+        src="/images/kepek/olaj06.jpg"
+        style="width: 300px"
+        style="border: 0"
+      />
+    </td>
+  </tr>
 
-          <tr>
-            <td valign="top">
-              <img
-                src="/images/kepek/olaj08.jpg"
-                style="width: 300px"
-                style="border: 0"
-              />
-            </td>
-            <td valign="top">
-              <img
-                src="/images/kepek/olaj07.jpg"
-                style="width: 300px"
-                style="border: 0"
-              />
-            </td>
-            <td valign="top">
-              <img
-                src="/images/kepek/olaj09.jpg"
-                style="width: 300px"
-                style="border: 0"
-              />
+  <tr>
+    <td valign="top">
+      <img
+        src="/images/kepek/olaj08.jpg"
+        style="width: 300px"
+        style="border: 0"
+      />
+    </td>
+    <td valign="top">
+      <img
+        src="/images/kepek/olaj07.jpg"
+        style="width: 300px"
+        style="border: 0"
+      />
+    </td>
+    <td valign="top">
+      <img
+        src="/images/kepek/olaj09.jpg"
+        style="width: 300px"
+        style="border: 0"
+      />
+    </td>
+  </tr>
+  <tr>
+    <td valign="top">
+      <img
+        src="/images/kepek/olaj10.jpg"
+        style="width: 300px"
+        style="border: 0"
+      />
+    </td>
+    <td valign="top">
+      <img
+        src="/images/kepek/olaj11.jpg"
+        style="width: 300px"
+        style="border: 0"
+      />
+    </td>
+    <td valign="top">
+      <img
+        src="/images/kepek/olaj12.jpg"
+        style="width: 300px"
+        style="border: 0"
+      />
+    </td>
+  </tr>
+  <tr>
+    <td valign="top">
+      <img
+        src="/images/kepek/olaj13.jpg"
+        style="width: 300px"
+        style="border: 0"
+      />
+    </td>
+    <td valign="top">
+      <img
+        src="/images/kepek/olaj14.jpg"
+        style="width: 300px"
+        style="border: 0"
+      />
+    </td>
+    <td valign="top">
+      <img
+        src="/images/kepek/olaj19.jpg"
+        style="width: 300px"
+        style="border: 0"
+      />
+    </td>
+  </tr>
+  <tr>
+    <td valign="top">
+      <img
+        src="/images/kepek/olaj18.jpg"
+        style="width: 300px"
+        style="border: 0"
+      />
+    </td>
+    <td valign="top">
+      <img
+        src="/images/kepek/olaj21.jpg"
+        style="width: 300px"
+        style="border: 0"
+      />
+    </td>
+    <td valign="top">
+      <img
+        src="/images/kepek/olaj22.jpg"
+        style="width: 300px"
+        style="border: 0"
+      />
+    </td>
+  </tr>
+  <tr>
+    <td valign="top">
+      <img
+        src="/images/kepek/olaj24.jpg"
+        style="width: 300px"
+        style="border: 0"
+      />
+    </td>
+    <td valign="top">
+      <img
+        src="/images/kepek/olaj23.jpg"
+        style="width: 300px"
+        style="border: 0"
+      />
+    </td>
+    <td valign="top">
+      <img
+        src="/images/kepek/olaj17.jpg"
+        style="width: 300px"
+        style="border: 0"
+      />
+    </td>
+  </tr>
+  <tr>
+    <td valign="top">
+      <img
+        src="/images/kepek/olaj20.jpg"
+        style="width: 300px"
+        style="border: 0"
+      />
+    </td>
+    <td valign="top">
+      <img
+        src="/images/kepek/olaj26.jpg"
+        style="width: 300px"
+        style="border: 0"
+      />
+    </td>
+    <td valign="top">
+      <img
+        src="/images/kepek/olaj25.jpg"
+        style="width: 300px"
+        style="border: 0"
+      />
+    </td>
+  </tr>
 
-              <tr>
-                <td valign="top">
-                  <img
-                    src="/images/kepek/olaj10.jpg"
-                    style="width: 300px"
-                    style="border: 0"
-                  />
-                </td>
-                <td valign="top">
-                  <img
-                    src="/images/kepek/olaj11.jpg"
-                    style="width: 300px"
-                    style="border: 0"
-                  />
-                </td>
-                <td valign="top">
-                  <img
-                    src="/images/kepek/olaj12.jpg"
-                    style="width: 300px"
-                    style="border: 0"
-                  />
-
-                  <tr>
-                    <td valign="top">
-                      <img
-                        src="/images/kepek/olaj13.jpg"
-                        style="width: 300px"
-                        style="border: 0"
-                      />
-                    </td>
-                    <td valign="top">
-                      <img
-                        src="/images/kepek/olaj14.jpg"
-                        style="width: 300px"
-                        style="border: 0"
-                      />
-                    </td>
-                    <td valign="top">
-                      <img
-                        src="/images/kepek/olaj19.jpg"
-                        style="width: 300px"
-                        style="border: 0"
-                      />
-
-                      <tr>
-                        <td valign="top">
-                          <img
-                            src="/images/kepek/olaj18.jpg"
-                            style="width: 300px"
-                            style="border: 0"
-                          />
-                        </td>
-                        <td valign="top">
-                          <img
-                            src="/images/kepek/olaj21.jpg"
-                            style="width: 300px"
-                            style="border: 0"
-                          />
-                        </td>
-                        <td valign="top">
-                          <img
-                            src="/images/kepek/olaj22.jpg"
-                            style="width: 300px"
-                            style="border: 0"
-                          />
-
-                          <tr>
-                            <td valign="top">
-                              <img
-                                src="/images/kepek/olaj24.jpg"
-                                style="width: 300px"
-                                style="border: 0"
-                              />
-                            </td>
-                            <td valign="top">
-                              <img
-                                src="/images/kepek/olaj23.jpg"
-                                style="width: 300px"
-                                style="border: 0"
-                              />
-                            </td>
-                            <td valign="top">
-                              <img
-                                src="/images/kepek/olaj17.jpg"
-                                style="width: 300px"
-                                style="border: 0"
-                              />
-
-                              <tr>
-                                <td valign="top">
-                                  <img
-                                    src="/images/kepek/olaj20.jpg"
-                                    style="width: 300px"
-                                    style="border: 0"
-                                  />
-                                </td>
-                                <td valign="top">
-                                  <img
-                                    src="/images/kepek/olaj26.jpg"
-                                    style="width: 300px"
-                                    style="border: 0"
-                                  />
-                                </td>
-                                <td valign="top">
-                                  <img
-                                    src="/images/kepek/olaj25.jpg"
-                                    style="width: 300px"
-                                    style="border: 0"
-                                  />
-
-                                  <tr>
-                                    <table
-                                      cellspacing="10"
-                                      style="border-collapse: collapse"
-                                    >
-                                      <td
-                                        valign="top"
-                                        style="text-align: right"
-                                      >
-                                        <img
-                                          src="/images/kepek/olaj15.jpg"
-                                          style="height: 300px"
-                                          style="border: 0"
-                                        />
-                                      </td>
-                                      <td valign="top" style="text-align: left">
-                                        <img
-                                          src="/images/kepek/olaj16.jpg"
-                                          style="height: 300px"
-                                          style="border: 0"
-                                        />
-                                      </td>
-                                    </table>
-                                  </tr>
-                                </td>
-                              </tr>
-                            </td>
-                          </tr>
-                        </td>
-                      </tr>
-                    </td>
-                  </tr>
-                </td>
-              </tr>
-            </td>
-          </tr>
-        </td>
-      </tr>
+  <tr>
+    <td colspan="3">
+      <div style="display: flex; justify-content: center; gap: 16px">
+        <img
+          src="/images/kepek/olaj15.jpg"
+          style="height: 300px"
+          style="border: 0"
+        />
+        <img
+          src="/images/kepek/olaj16.jpg"
+          style="height: 300px"
+          style="border: 0"
+        />
+      </div>
     </td>
   </tr>
 </table>
