--- a/content/pasztell.html
+++ b/content/pasztell.html
@@ -7,83 +7,43 @@ markup: html
 
 <p class="lapcim">Pasztellek <br /><br style="font-size: 40" /></p>
 
-<table cellspacing="15">
+<table>
   <tr>
     <td style="display: flex; justify-content: center; align-items: center">
       <img src="/images/kepek/pasztell01.jpg" style="width: 300px" />
     </td>
+
     <td style="display: flex; justify-content: center; align-items: center">
       <img src="/images/kepek/pasztell02.jpg" style="width: 300px" />
     </td>
+
     <td>
-      <table style="border-spacing: 0" style="border: 0">
-        <tr>
-          <td
-            style="display: flex; justify-content: center; align-items: center"
-          >
-            <img src="/images/kepek/pasztell03.jpg" style="width: 300px" />
-          </td>
-        </tr>
-        <tr>
-          <td><br style="font-size: 20" /></td>
-        </tr>
-        <tr>
-          <td
-            style="display: flex; justify-content: center; align-items: center"
-          >
-            <img src="/images/kepek/pasztell04.jpg" style="width: 300px" />
-          </td>
-        </tr>
-      </table>
+      <div style="display: flex; flex-direction: column; gap: 16px">
+        <img src="/images/kepek/pasztell03.jpg" style="width: 300px" />
+        <img src="/images/kepek/pasztell04.jpg" style="width: 300px" />
+      </div>
+    </td>
+  </tr>
 
-      <tr>
-        <td style="display: flex; justify-content: center; align-items: center">
-          <img src="/images/kepek/pasztell05.jpg" style="width: 300px" />
-        </td>
-        <td style="display: flex; justify-content: center; align-items: center">
-          <img src="/images/kepek/pasztell06.jpg" style="width: 300px" />
-        </td>
-        <td style="display: flex; justify-content: center; align-items: center">
-          <img src="/images/kepek/pasztell08.jpg" style="width: 300px" />
+  <tr>
+    <td style="display: flex; justify-content: center; align-items: center">
+      <img src="/images/kepek/pasztell05.jpg" style="width: 300px" />
+    </td>
+    <td style="display: flex; justify-content: center; align-items: center">
+      <img src="/images/kepek/pasztell06.jpg" style="width: 300px" />
+    </td>
 
-          <tr>
-            <td colspan="3">
-              <table
-                cellspacing="20"
-                style="border: 0"
-                style="text-align: center"
-              >
-                <tr>
-                  <td
-                    style="
-                      display: flex;
-                      justify-content: center;
-                      align-items: center;
-                    "
-                  >
-                    <img
-                      src="/images/kepek/pasztell09.jpg"
-                      style="width: 300px"
-                    />
-                  </td>
-                  <td
-                    style="
-                      display: flex;
-                      justify-content: center;
-                      align-items: center;
-                    "
-                  >
-                    <img
-                      src="/images/kepek/pasztell07.jpg"
-                      style="width: 300px"
-                    />
-                  </td>
-                </tr>
-              </table>
-            </td>
-          </tr>
-        </td>
-      </tr>
+    <td style="display: flex; justify-content: center; align-items: center">
+      <img src="/images/kepek/pasztell08.jpg" style="width: 300px" />
+    </td>
+  </tr>
+
+  <tr>
+    <td colspan="3">
+      <div style="display: flex; gap: 16px">
+        <img src="/images/kepek/pasztell09.jpg" style="width: 300px" />
+        <img src="/images/kepek/pasztell07.jpg" style="width: 300px" />
+      </div>
     </td>
   </tr>
 </table>
