converted to model html

--- a/content/fotok.html
+++ b/content/fotok.html
@@ -5,31 +5,13 @@ weight: 3
 markup: html
 ---
 
-<p class="lapcim">Fotók</p>
-<br /><br style="font-size: 40px" />
+<h1 class="lapcim">Fotók</h1>
 
-<table style="border-spacing: 10px">
-  <tr>
-    <td style="text-align: center">
-      <img src="/images/kepek/foto01.jpg" style="width: 300px" alt="Fotó 1" />
-    </td>
-    <td style="text-align: center">
-      <img src="/images/kepek/foto02.jpg" style="width: 300px" alt="Fotó 2" />
-    </td>
-    <td style="text-align: center">
-      <img src="/images/kepek/foto03.jpg" style="width: 300px" alt="Fotó 3" />
-    </td>
-  </tr>
-  <tr>
-    <td style="text-align: center">
-      <img src="/images/kepek/foto04.jpg" style="width: 300px" alt="Fotó 4" />
-    </td>
-    <td style="text-align: center">
-      <img src="/images/kepek/foto05.jpg" style="width: 300px" alt="Fotó 5" />
-    </td>
-    <td style="text-align: center">
-      <img src="/images/kepek/foto06.jpg" style="width: 300px" alt="Fotó 6" />
-    </td>
-  </tr>
-</table>
-
+<div class="images">
+  <img src="/images/kepek/foto01.jpg" alt="Fotó 1" />
+  <img src="/images/kepek/foto02.jpg" alt="Fotó 2" />
+  <img src="/images/kepek/foto03.jpg" alt="Fotó 3" />
+  <img src="/images/kepek/foto04.jpg" alt="Fotó 4" />
+  <img src="/images/kepek/foto05.jpg" alt="Fotó 5" />
+  <img src="/images/kepek/foto06.jpg" alt="Fotó 6" />
+</div>
