--- a/content/grafika.html
+++ b/content/grafika.html
@@ -5,131 +5,25 @@ weight: 1
 markup: html
 ---
 
-<p class="lapcim">Grafikák <br /><br style="font-size: 40" /></p>
+<h1 class="lapcim">Grafikák</h1>
 
-<table cellspacing="15">
-  <tr>
-    <td><img src="/images/kepek/grafika01.jpg" style="width: 300px" /></td>
-    <td><img src="/images/kepek/grafika02.jpg" style="width: 300px" /></td>
-    <td>
-      <img src="/images/kepek/grafika03.jpg" style="width: 300px" />
-
-      <tr>
-        <td><img src="/images/kepek/grafika04.jpg" style="width: 300px" /></td>
-        <td><img src="/images/kepek/grafika05.jpg" style="width: 300px" /></td>
-        <td>
-          <img src="/images/kepek/grafika06.jpg" style="width: 300px" />
-
-          <tr>
-            <td>
-              <img src="/images/kepek/grafika07.jpg" style="width: 300px" />
-            </td>
-            <td>
-              <img src="/images/kepek/grafika08.jpg" style="width: 300px" />
-            </td>
-            <td>
-              <table>
-                <tr>
-                  <td>
-                    <img
-                      src="/images/kepek/grafika09.jpg"
-                      style="width: 300px"
-                    />
-                    <tr>
-                      <td>
-                        <br style="font-size: 20" />
-                        <tr>
-                          <td>
-                            <img
-                              src="/images/kepek/grafika11.jpg"
-                              style="width: 300px"
-                            />
-                          </td>
-                        </tr>
-                      </td>
-                    </tr>
-                  </td>
-                </tr>
-              </table>
-
-              <tr>
-                <td>
-                  <img src="/images/kepek/grafika10.jpg" style="width: 300px" />
-                </td>
-                <td>
-                  <img src="/images/kepek/grafika12.jpg" style="width: 300px" />
-                </td>
-                <td>
-                  <img src="/images/kepek/grafika13.jpg" style="width: 300px" />
-
-                  <tr>
-                    <td>
-                      <img
-                        src="/images/kepek/grafika15.jpg"
-                        style="width: 300px"
-                      />
-                    </td>
-                    <td>
-                      <img
-                        src="/images/kepek/grafika16.jpg"
-                        style="width: 300px"
-                      />
-                    </td>
-                    <td>
-                      <img
-                        src="/images/kepek/grafika17.jpg"
-                        style="width: 300px"
-                      />
-
-                      <tr>
-                        <td>
-                          <img
-                            src="/images/kepek/grafika19.jpg"
-                            style="width: 300px"
-                          />
-                        </td>
-                        <td>
-                          <img
-                            src="/images/kepek/grafika14.jpg"
-                            style="width: 300px"
-                          />
-                        </td>
-                        <td>
-                          <img
-                            src="/images/kepek/grafika18.jpg"
-                            style="width: 300px"
-                          />
-
-                          <tr>
-                            <td>
-                              <img
-                                src="/images/kepek/grafika20.jpg"
-                                style="width: 300px"
-                              />
-                            </td>
-                            <td>
-                              <img
-                                src="/images/kepek/grafika21.jpg"
-                                style="width: 300px"
-                              />
-                            </td>
-                            <td>
-                              <img
-                                src="/images/kepek/grafika22.jpg"
-                                style="width: 300px"
-                              />
-                            </td>
-                          </tr>
-                        </td>
-                      </tr>
-                    </td>
-                  </tr>
-                </td>
-              </tr>
-            </td>
-          </tr>
-        </td>
-      </tr>
-    </td>
-  </tr>
-</table>
+<div class="images">
+  <img src="/images/kepek/grafika03.jpg" />
+  <img src="/images/kepek/grafika06.jpg" />
+  <img src="/images/kepek/grafika07.jpg" />
+  <img src="/images/kepek/grafika08.jpg" />
+  <img src="/images/kepek/grafika09.jpg" />
+  <img src="/images/kepek/grafika11.jpg" />
+  <img src="/images/kepek/grafika10.jpg" />
+  <img src="/images/kepek/grafika12.jpg" />
+  <img src="/images/kepek/grafika13.jpg" />
+  <img src="/images/kepek/grafika15.jpg" />
+  <img src="/images/kepek/grafika16.jpg" />
+  <img src="/images/kepek/grafika17.jpg" />
+  <img src="/images/kepek/grafika19.jpg" />
+  <img src="/images/kepek/grafika14.jpg" />
+  <img src="/images/kepek/grafika18.jpg" />
+  <img src="/images/kepek/grafika20.jpg" />
+  <img src="/images/kepek/grafika21.jpg" />
+  <img src="/images/kepek/grafika22.jpg" />
+</div>
