--- a/content/kepzomuveszet.html
+++ b/content/kepzomuveszet.html
@@ -5,54 +5,26 @@ weight: 1
 markup: html
 ---
 
-<p class="lapcim">Képzőművészet <br /><br style="font-size: 72" /></p>
+<h2 class="lapcim">Képzőművészet</h2>
 
-<table style="border-spacing: 0">
-  <tr>
-    <td class="szoveg" bgcolor="#324026" style="text-indent: 0">
-      <a href="/olaj"><p style="text-align: center">Olajfestmények</p></a>
-    </td>
-    <td style="width: 50px"></td>
-    <td class="szoveg" bgcolor="#324026" style="text-indent: 0">
-      <a href="/akvarell"><p style="text-align: center">Akvarellek</p></a>
-    </td>
-    <td style="width: 50px"></td>
-    <td class="szoveg" bgcolor="#324026" style="text-indent: 0">
-      <a href="/pasztell"><p style="text-align: center">Pasztellek</p></a>
-    </td>
-    <td style="width: 50px"></td>
-    <td class="szoveg" bgcolor="#324026" style="text-indent: 0">
-      <a href="/grafika"><p style="text-align: center">Grafikék</p></a>
+<div class="images">
+  <a href="/olaj">
+    <div>Olajfestmények</div>
+    <img src="/images/a.jpg" style="width: 250px" style="border: 0" />
+  </a>
 
-      <tr>
-        <td valign="top">
-          <a href="/olaj"
-            ><img src="/images/a.jpg" style="width: 250px" style="border: 0"
-          /></a>
-        </td>
-        <td></td>
-        <td style="text-align: right" valign="top">
-          <a href="/akvarell"
-            ><img src="/images/b.jpg" style="width: 250px" style="border: 0"
-          /></a>
-        </td>
-        <td></td>
-        <td valign="top">
-          <a href="/pasztell"
-            ><img src="/images/c.jpg" style="width: 250px" style="border: 0"
-          /></a>
-        </td>
-        <td></td>
-        <td style="text-align: right" valign="top">
-          <a href="/grafika"
-            ><img src="/images/d.jpg" style="width: 250px" style="border: 0"
-          /></a>
+  <a href="/akvarell">
+    <div>Akvarellek</div>
+    <img src="/images/b.jpg" style="width: 250px" style="border: 0" />
+  </a>
 
-          <!-- <tr><td height=20 colspan=3> -->
+  <a href="/pasztell">
+    <div>Pasztellek</div>
+    <img src="/images/c.jpg" style="width: 250px" style="border: 0" />
+  </a>
 
-          <tr></tr>
-        </td>
-      </tr>
-    </td>
-  </tr>
-</table>
+  <a href="/grafika">
+    <div>Grafikák</div>
+    <img src="/images/d.jpg" style="width: 250px" style="border: 0" />
+  </a>
+</div>
