--- a/content/olaj.html
+++ b/content/olaj.html
@@ -5,210 +5,31 @@ weight: 1
 markup: html
 ---
 
-<p class="lapcim">Olajfestmények <br /><br style="font-size: 40" /></p>
+<h1 class="lapcim">Olajfestmények</h1>
 
-<table cellspacing="10">
-  <tr>
-    <td valign="top">
-      <img
-        src="/images/kepek/olaj01.jpg"
-        style="width: 300px"
-        style="border: 0"
-      />
-    </td>
-    <td valign="top">
-      <img
-        src="/images/kepek/olaj02.jpg"
-        style="width: 300px"
-        style="border: 0"
-      />
-    </td>
-    <td valign="top">
-      <img
-        src="/images/kepek/olaj03.jpg"
-        style="width: 300px"
-        style="border: 0"
-      />
-    </td>
-  </tr>
-
-  <tr>
-    <td valign="top">
-      <img
-        src="/images/kepek/olaj04.jpg"
-        style="width: 300px"
-        style="border: 0"
-      />
-    </td>
-    <td valign="top">
-      <img
-        src="/images/kepek/olaj05.jpg"
-        style="width: 300px"
-        style="border: 0"
-      />
-    </td>
-    <td valign="top">
-      <img
-        src="/images/kepek/olaj06.jpg"
-        style="width: 300px"
-        style="border: 0"
-      />
-    </td>
-  </tr>
-
-  <tr>
-    <td valign="top">
-      <img
-        src="/images/kepek/olaj08.jpg"
-        style="width: 300px"
-        style="border: 0"
-      />
-    </td>
-    <td valign="top">
-      <img
-        src="/images/kepek/olaj07.jpg"
-        style="width: 300px"
-        style="border: 0"
-      />
-    </td>
-    <td valign="top">
-      <img
-        src="/images/kepek/olaj09.jpg"
-        style="width: 300px"
-        style="border: 0"
-      />
-    </td>
-  </tr>
-  <tr>
-    <td valign="top">
-      <img
-        src="/images/kepek/olaj10.jpg"
-        style="width: 300px"
-        style="border: 0"
-      />
-    </td>
-    <td valign="top">
-      <img
-        src="/images/kepek/olaj11.jpg"
-        style="width: 300px"
-        style="border: 0"
-      />
-    </td>
-    <td valign="top">
-      <img
-        src="/images/kepek/olaj12.jpg"
-        style="width: 300px"
-        style="border: 0"
-      />
-    </td>
-  </tr>
-  <tr>
-    <td valign="top">
-      <img
-        src="/images/kepek/olaj13.jpg"
-        style="width: 300px"
-        style="border: 0"
-      />
-    </td>
-    <td valign="top">
-      <img
-        src="/images/kepek/olaj14.jpg"
-        style="width: 300px"
-        style="border: 0"
-      />
-    </td>
-    <td valign="top">
-      <img
-        src="/images/kepek/olaj19.jpg"
-        style="width: 300px"
-        style="border: 0"
-      />
-    </td>
-  </tr>
-  <tr>
-    <td valign="top">
-      <img
-        src="/images/kepek/olaj18.jpg"
-        style="width: 300px"
-        style="border: 0"
-      />
-    </td>
-    <td valign="top">
-      <img
-        src="/images/kepek/olaj21.jpg"
-        style="width: 300px"
-        style="border: 0"
-      />
-    </td>
-    <td valign="top">
-      <img
-        src="/images/kepek/olaj22.jpg"
-        style="width: 300px"
-        style="border: 0"
-      />
-    </td>
-  </tr>
-  <tr>
-    <td valign="top">
-      <img
-        src="/images/kepek/olaj24.jpg"
-        style="width: 300px"
-        style="border: 0"
-      />
-    </td>
-    <td valign="top">
-      <img
-        src="/images/kepek/olaj23.jpg"
-        style="width: 300px"
-        style="border: 0"
-      />
-    </td>
-    <td valign="top">
-      <img
-        src="/images/kepek/olaj17.jpg"
-        style="width: 300px"
-        style="border: 0"
-      />
-    </td>
-  </tr>
-  <tr>
-    <td valign="top">
-      <img
-        src="/images/kepek/olaj20.jpg"
-        style="width: 300px"
-        style="border: 0"
-      />
-    </td>
-    <td valign="top">
-      <img
-        src="/images/kepek/olaj26.jpg"
-        style="width: 300px"
-        style="border: 0"
-      />
-    </td>
-    <td valign="top">
-      <img
-        src="/images/kepek/olaj25.jpg"
-        style="width: 300px"
-        style="border: 0"
-      />
-    </td>
-  </tr>
-
-  <tr>
-    <td colspan="3">
-      <div style="display: flex; justify-content: center; gap: 16px">
-        <img
-          src="/images/kepek/olaj15.jpg"
-          style="height: 300px"
-          style="border: 0"
-        />
-        <img
-          src="/images/kepek/olaj16.jpg"
-          style="height: 300px"
-          style="border: 0"
-        />
-      </div>
-    </td>
-  </tr>
-</table>
+<div class="images">
+  <img src="/images/kepek/olaj01.jpg" />
+  <img src="/images/kepek/olaj02.jpg" />
+  <img src="/images/kepek/olaj03.jpg" />
+  <img src="/images/kepek/olaj05.jpg" />
+  <img src="/images/kepek/olaj08.jpg" />
+  <img src="/images/kepek/olaj07.jpg" />
+  <img src="/images/kepek/olaj09.jpg" />
+  <img src="/images/kepek/olaj10.jpg" />
+  <img src="/images/kepek/olaj11.jpg" />
+  <img src="/images/kepek/olaj12.jpg" />
+  <img src="/images/kepek/olaj13.jpg" />
+  <img src="/images/kepek/olaj14.jpg" />
+  <img src="/images/kepek/olaj19.jpg" />
+  <img src="/images/kepek/olaj18.jpg" />
+  <img src="/images/kepek/olaj21.jpg" />
+  <img src="/images/kepek/olaj22.jpg" />
+  <img src="/images/kepek/olaj24.jpg" />
+  <img src="/images/kepek/olaj23.jpg" />
+  <img src="/images/kepek/olaj17.jpg" />
+  <img src="/images/kepek/olaj20.jpg" />
+  <img src="/images/kepek/olaj26.jpg" />
+  <img src="/images/kepek/olaj25.jpg" />
+  <img src="/images/kepek/olaj15.jpg" />
+  <img src="/images/kepek/olaj16.jpg" />
+</div>
