--- a/content/akvarell.html
+++ b/content/akvarell.html
@@ -5,96 +5,18 @@ weight: 1
 markup: html
 ---
 
-<p class="lapcim">Akvarellek</p>
-<br /><br style="font-size: 40px" />
+<h1 class="lapcim">Akvarellek</h1>
 
-<table style="border-spacing: 10px">
-  <!-- First row with 5 images -->
-  <tr>
-    <td style="text-align: center">
-      <img
-        src="/images/kepek/akva01.jpg"
-        style="height: 230px"
-        alt="Akvarell 1"
-      />
-    </td>
-    <td style="text-align: center">
-      <img
-        src="/images/kepek/akva02.jpg"
-        style="height: 230px"
-        alt="Akvarell 2"
-      />
-    </td>
-    <td style="text-align: center">
-      <img
-        src="/images/kepek/akva03.jpg"
-        style="height: 230px"
-        alt="Akvarell 3"
-      />
-    </td>
-    <td style="text-align: center">
-      <img
-        src="/images/kepek/akva11.jpg"
-        style="height: 230px"
-        alt="Akvarell 11"
-      />
-    </td>
-    <td style="text-align: center">
-      <img
-        src="/images/kepek/akva12.jpg"
-        style="height: 230px"
-        alt="Akvarell 12"
-      />
-    </td>
-  </tr>
-
-  <!-- Second row with 3 images -->
-  <tr>
-    <td style="text-align: center">
-      <img
-        src="/images/kepek/akva10.jpg"
-        style="width: 300px"
-        alt="Akvarell 10"
-      />
-    </td>
-    <td style="text-align: center">
-      <img
-        src="/images/kepek/akva08.jpg"
-        style="width: 300px"
-        alt="Akvarell 8"
-      />
-    </td>
-    <td style="text-align: center">
-      <img
-        src="/images/kepek/akva04.jpg"
-        style="width: 300px"
-        alt="Akvarell 4"
-      />
-    </td>
-  </tr>
-
-  <!-- Third row with 3 images -->
-  <tr>
-    <td style="text-align: center">
-      <img
-        src="/images/kepek/akva05.jpg"
-        style="width: 300px"
-        alt="Akvarell 5"
-      />
-    </td>
-    <td style="text-align: center">
-      <img
-        src="/images/kepek/akva06.jpg"
-        style="width: 300px"
-        alt="Akvarell 6"
-      />
-    </td>
-    <td style="text-align: center">
-      <img
-        src="/images/kepek/akva07.jpg"
-        style="width: 300px"
-        alt="Akvarell 7"
-      />
-    </td>
-  </tr>
-</table>
+<div class="images">
+  <img src="/images/kepek/akva01.jpg" alt="Akvarell 1" />
+  <img src="/images/kepek/akva02.jpg" alt="Akvarell 2" />
+  <img src="/images/kepek/akva03.jpg" alt="Akvarell 3" />
+  <img src="/images/kepek/akva11.jpg" alt="Akvarell 11" />
+  <img src="/images/kepek/akva12.jpg" alt="Akvarell 12" />
+  <img src="/images/kepek/akva10.jpg" alt="Akvarell 10" />
+  <img src="/images/kepek/akva08.jpg" alt="Akvarell 8" />
+  <img src="/images/kepek/akva04.jpg" alt="Akvarell 4" />
+  <img src="/images/kepek/akva05.jpg" alt="Akvarell 5" />
+  <img src="/images/kepek/akva06.jpg" alt="Akvarell 6" />
+  <img src="/images/kepek/akva07.jpg" alt="Akvarell 7" />
+</div>
