--- a/content/pasztell.html
+++ b/content/pasztell.html
@@ -5,45 +5,16 @@ weight: 1
 markup: html
 ---
 
-<p class="lapcim">Pasztellek <br /><br style="font-size: 40" /></p>
+<h1 class="lapcim">Pasztellek</h1>
 
-<table>
-  <tr>
-    <td style="display: flex; justify-content: center; align-items: center">
-      <img src="/images/kepek/pasztell01.jpg" style="width: 300px" />
-    </td>
-
-    <td style="display: flex; justify-content: center; align-items: center">
-      <img src="/images/kepek/pasztell02.jpg" style="width: 300px" />
-    </td>
-
-    <td>
-      <div style="display: flex; flex-direction: column; gap: 16px">
-        <img src="/images/kepek/pasztell03.jpg" style="width: 300px" />
-        <img src="/images/kepek/pasztell04.jpg" style="width: 300px" />
-      </div>
-    </td>
-  </tr>
-
-  <tr>
-    <td style="display: flex; justify-content: center; align-items: center">
-      <img src="/images/kepek/pasztell05.jpg" style="width: 300px" />
-    </td>
-    <td style="display: flex; justify-content: center; align-items: center">
-      <img src="/images/kepek/pasztell06.jpg" style="width: 300px" />
-    </td>
-
-    <td style="display: flex; justify-content: center; align-items: center">
-      <img src="/images/kepek/pasztell08.jpg" style="width: 300px" />
-    </td>
-  </tr>
-
-  <tr>
-    <td colspan="3">
-      <div style="display: flex; gap: 16px">
-        <img src="/images/kepek/pasztell09.jpg" style="width: 300px" />
-        <img src="/images/kepek/pasztell07.jpg" style="width: 300px" />
-      </div>
-    </td>
-  </tr>
-</table>
+<div class="images">
+  <img src="/images/kepek/pasztell01.jpg" />
+  <img src="/images/kepek/pasztell02.jpg" />
+  <img src="/images/kepek/pasztell03.jpg" />
+  <img src="/images/kepek/pasztell04.jpg" />
+  <img src="/images/kepek/pasztell05.jpg" />
+  <img src="/images/kepek/pasztell06.jpg" />
+  <img src="/images/kepek/pasztell08.jpg" />
+  <img src="/images/kepek/pasztell09.jpg" />
+  <img src="/images/kepek/pasztell07.jpg" />
+</div>
